examples/1-example/0-namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: demo-ns 
  labels:
    istio-injection: enabled
