examples/1-example/1-deployment-v1.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: first-app-v1
  namespace: demo-ns 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: first-app
      version: v1
  template:
    metadata:
      labels:
        app: first-app
        version: v1
    spec:
      containers:
        - image: amasucci/bluegreen
          imagePullPolicy: Always
          name: first-app
          ports:
            - name: http
              containerPort: 80
