examples/1-example/3-myapp-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: first-app
  namespace: demo-ns 
spec:
  ports:
    - name: http
      port: 80
  selector:
    app: first-app
